# legacy-sipXlang-en_GB

./: Makefile.am  configure.ac  sipxecs-lang-en_GB.spec.in  sipxlang-en_GB.spec.in
sipxpbx/: sipxplugin.beans.xml
stdprompts/.svn/: all-wcprops  entries
stdprompts/.svn/text-base/: 01.wav.svn-base  02.wav.svn-base  08.wav.svn-base  09.wav.svn-base  100.wav.svn-base  11.wav.svn-base  12.wav.svn-base  13th.wav.svn-base  14th.wav.svn-base  16.wav.svn-base  16th.wav.svn-base  17th.wav.svn-base  18th.wav.svn-base  19.wav.svn-base  19th.wav.svn-base  2.wav.svn-base  200.wav.svn-base  2000.wav.svn-base  2002.wav.svn-base  2003.wav.svn-base  2005.wav.svn-base  2006.wav.svn-base  2008.wav.svn-base  2010.wav.svn-base  2011.wav.svn-base  2012.wav.svn-base  2015.wav.svn-base  2019.wav.svn-base  2020.wav.svn-base  23rd.wav.svn-base  24.wav.svn-base  24th.wav.svn-base  25.wav.svn-base  25th.wav.svn-base  26.wav.svn-base  26th.wav.svn-base  27th.wav.svn-base  29th.wav.svn-base  300.wav.svn-base  3000.wav.svn-base  (+203 more)
stdprompts/conf/.svn/: all-wcprops  entries
stdprompts/conf/.svn/text-base/: lockingConference.wav.svn-base  rollcallYouAreTheOnly.wav.svn-base
